--- a/style.css
+++ b/style.css
@@ -570,7 +570,7 @@
 
             height: 110px;      
             object-fit: cover; 
-            margin-top: -20gipx;
+            margin-top: -20px;
             width: 100%;
             max-width: 100%;
             object-fit: cover;
